<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="start_meditation"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_meditate"
        android:shortcutLongLabel="@string/shortcut_meditate_long"
        android:icon="@drawable/ic_shortcut_meditate">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.meditatorapp.meditator"
            android:targetClass="com.meditatorapp.meditator.MainActivity"
            android:data="meditator://ai-play?duration=10" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="breathing"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_breathe"
        android:shortcutLongLabel="@string/shortcut_breathe_long"
        android:icon="@drawable/ic_shortcut_breathe">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.meditatorapp.meditator"
            android:targetClass="com.meditatorapp.meditator.MainActivity"
            android:data="meditator://breathe?id=box" />
    </shortcut>

    <shortcut
        android:shortcutId="timer"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_timer"
        android:shortcutLongLabel="@string/shortcut_timer_long"
        android:icon="@drawable/ic_shortcut_timer">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.meditatorapp.meditator"
            android:targetClass="com.meditatorapp.meditator.MainActivity"
            android:data="meditator://timer" />
    </shortcut>

</shortcuts>
